Ticket #25918: Made GWT compatible.